nginx-Deployment.yaml
                        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
spec:
  replicas: 7
  selector:
    matchLabels:
      app: nginx 
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
      - name: nginx
        image: 902268280034.dkr.ecr.ap-northeast-2.amazonaws.com/dhlee:8-nginx-prod
        ports:
        - containerPort: 80
